--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Statusikoner for beskeder (sendt, leveret osv.) fungerer nu med iOS VoiceOver for bedre tilgængelighed for blinde og svagsynede.
