--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Nachrichtenstatus-Anzeigen (gesendet, zugestellt usw.) werden jetzt von der iOS-Funktion »VoiceOver« unterstützt, um die Barrierefreiheit für blinde und sehbehinderte Menschen zu verbessern.
