--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Signal donne de la voix ! La fonction VoiceOver d'iOS prend désormais en charge les indicateurs d'état des messages (envoyé, distribué, etc.). Objectif : améliorer l'accessibilité de l'application pour les personnes aveugles et malvoyantes.
