--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• संदेश की स्थिति बताने वाले संकेतकों (sent, delivered, etc.) को अब iOS VoiceOver फ़ीचर सपोर्ट करता है, ताकि नेत्रहीन और कमज़ोर नज़र वाले लोगों के लिए ऐक्सेसिबिलिटी बेहतर हो सके।
