--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Indikator status pesan (terkirim, dikirim, dll.) kini didukung oleh fitur iOS VoiceOver untuk meningkatkan aksesibilitas bagi pengguna disabilitas netra atau gangguan penglihatan lainnya.
