--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Gli indicatori dello stato dei messaggi (inviato, consegnato, e così via) hanno ora il supporto alla funzione di VoiceOver di iOS così da migliorare l'accessibilità per le persone ipovedenti o non vedenti.
