--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Poprawiliśmy dostępność aplikacji dla osób niewidzących lub niedowidzących za sprawą nowych opisów głosowych obsługiwanych przez funkcję VoiceOver systemu iOS, które informują o statusie wiadomości (na przykład „wysłano” lub „dostarczono”).
