--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,1 @@
-• Message status indicators (sent, delivered, etc.) are now supported by the iOS VoiceOver feature in order to improve accessibility for blind and low-vision individuals.
+• Поліпшено доступність для людей з повною і частковою втратою зору: VoiceOver для iOS тепер озвучує статуси повідомлень (надіслано, доставлено тощо).
